examples/test/testpolicy3412.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3412
  namespace: namespace223
spec:
  podSelector:
    matchLabels:
      key44: value4
      key21: value49
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key4: value49
          key30: value38
      podSelector:
        matchLabels:
          key37: value24
          key4: value7
